# orbslam3_ros2

./: .clang-format  .clangd  .gitignore  .gitmodules  CMakeLists.txt  CMakeUserPresets.json  README.md  conanfile.py  package.xml  pyproject.toml
action/: ExportPointCloud.action
cmake/: g2o_config.h.in  orbslam3_vendor.cmake  pangolin_vendor.cmake
conan/profiles/: linux_armv8  myprofile
conan/recipes/dbow2_orbslam3/: conanfile.py
conan/recipes/g2o_orbslam3/: conanfile.py
conan/recipes/pangolin/: conanfile.py
conan/recipes/sophus_orbslam3/: conanfile.py
config/: orbslam3_rgbd_split.yaml  rgbd.yaml  rgbd_split.yaml  slam.yaml
config/Calibration/: recorder_realsense_D435i.cc  recorder_realsense_T265.cc
config/Calibration/python_scripts/: process_imu.py
config/RGB-D/: RealSense_D435i_save.yaml  TUM1_save.yaml
docs/: DEBUG_SANITIZERS.md  OFFLINE_EXPORT_TROUBLESHOOTING.md  VENDOR_SETUP.md  WSL_REALSENSE_SETUP.md  config.md  dev.md  interfaces.md
examples/open3d_viewer_server/: .gitignore  README.md  pyproject.toml
examples/open3d_viewer_server/open3d_viewer_server/: __init__.py  server.py
include/orbslam3_ros2/common/: pose_path_publisher.hpp  reset_service.hpp  tf_publisher.hpp  viewer_backend_policy.hpp
include/orbslam3_ros2/core/: command_completion.hpp  core_config.hpp  guarded_worker.hpp  orbslam3_core_node.hpp  resource_resolver.hpp  slam_command_queue.hpp  slam_runtime.hpp  tracking_backend.hpp  tracking_backend_interface.hpp  tracking_diagnostics.hpp  tracking_pipeline.hpp
include/orbslam3_ros2/orbslam3/: system.hpp
include/orbslam3_ros2/rgbd/: rgbd_config.hpp  rgbd_image_convert.hpp  rgbd_tracking_pipeline.hpp
include/orbslam3_ros2/sync/: rgbd_sync.hpp
launch/: orbslam3_rgbd_split.launch.py  realsense_d435i_rgbd_wsl_save.launch.py  tum_rgbd.launch.py
maps/: .gitignore
msg/: Observations.msg
scripts/: bootstrap_vendor.py  build_colcon.py  check_outputs.py  conan_rebuild.py  extract_asan_first_error.py  launch_realsense.py  run_and_tee.py  run_e2e.py  run_native_runner.py  verify_runtime.py  wait_for_topics.py
src/: export_osa.cpp  ros_rgbd.cpp
src/core/: command_completion.cpp  core_config.cpp  core_node_config.cpp  core_node_export.cpp  core_node_interfaces.cpp  core_node_main.cpp  core_node_worker.cpp  guarded_worker.cpp  resource_resolver.cpp  tracking_backend.cpp  tracking_diagnostics.cpp
src/rgbd/: rgbd_config.cpp  rgbd_frontend_node.cpp  rgbd_image_convert.cpp
src/tools/: make_e2e_bag.cpp  native_runner.cpp  path_node.cpp  tracking_cloud_node.cpp
srv/: GetStatus.srv  GetTrackedPoints.srv  SaveTrajectory.srv  SetLocalizationMode.srv
test/: test_viewer_backend_policy.cpp
test/launch/: test_backpressure.launch.py  test_e2e_lifecycle_bag.launch.py  test_export_under_load.launch.py  test_long_run.launch.py  test_rgbd_smoke.launch.py  test_thread_safety_storm.launch.py
test/nodes/: obs_pub_node.cpp  svc_storm_node.cpp
test/pytest/: test_metrics.py  test_services.py
test/utils/: metrics.py
