<?xml version="1.0"?>
<package format="3">
  <name>orbslam3_ros2</name>
  <version>0.0.0</version>
  <description>ROS 2 wrapper for ORB-SLAM3 with runtime nodes and offline atlas export tooling.</description>

  <maintainer email="todo@example.com">TODO Maintainer</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>orbslam3_ros2_vendor</build_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>message_filters</depend>
  <depend>std_srvs</depend>
  <exec_depend>orbslam3_ros2_vendor</exec_depend>

  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
