[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "open3d-viewer-server"
version = "0.1.0"
description = "Open3D WebVisualizer server example for ORB-SLAM3 exported maps"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "open3d",
  "numpy",
]

[project.scripts]
open3d-viewer-server = "open3d_viewer_server.server:main"

[tool.setuptools.packages.find]
include = ["open3d_viewer_server*"]
